<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimarySemiTransparent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_main"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".InitialActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bhp"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/main_title"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ll_courses"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/main_subtitle"
                android:textStyle="bold" />

            <Button
                android:id="@+id/courses_button"
                style="?android:textAppearanceSmall"
                android:layout_width="@dimen/button_max_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/courses"
                android:textStyle="bold" />

            <Button
                android:id="@+id/io_button"
                style="?android:textAppearanceSmall"
                android:layout_width="@dimen/button_max_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_exit"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_admin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:id="@+id/btn_courses"
                style="?android:textAppearanceSmall"
                android:layout_width="@dimen/button_max_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/courses"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_visitors"
                style="?android:textAppearanceSmall"
                android:layout_width="@dimen/button_max_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/visitors"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
